--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
