--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0",
     "vite": "^4.4.9"
   },
