--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
+    "socketio": "^1.0.0",
     "uuid": "^9.0.0",
     "vite": "^4.4.9"
   },
